<resources>
    <string name="app_name">Doctors Prescriptor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text">"This app is developed and designed by,"</string>
    <string name="text2">"3rd Year 6th Sem Students,"</string>
    <string name="text3">"Guided by,"</string>
    <string name="text4">"H.O.D. Prof. I. C. Mehta"</string>
    <string name="text5">"Project incharge"</string>
    <string name="text6">"Prof. Katre sir"</string>
    <string name="text7">"Dept. of Computer Technology"</string>
    <string name="text8">"M.I.E.T. Gondia"</string>

</resources>
