<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <RelativeLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/shri">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo"
            android:layout_above="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="Doctor's Prescriptor"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:fontFamily="cursive"
            android:text="@string/text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/text2"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView1"
            android:layout_alignStart="@+id/textView3" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/text3"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView4" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/text4"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView5" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/text5"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView6" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/text6"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView5"
            android:layout_alignStart="@+id/textView7" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/text7"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView8" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/text8"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/textView1" />
    </RelativeLayout>
    <include
        layout="@layout/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home"
        app:menu="@menu/activity_home_drawer" />


</android.support.v4.widget.DrawerLayout>
